--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #fff;
+    font-family: Sans-serif, Arial, Helvetica;
+    color: #f6b042;
+    background-color: #533549;
     
 }
 
@@ -11,14 +12,14 @@
     height: 400px;
     width: 100%;
     border: solid 1px pink;
-    color: #000;
+    
 }
 
 #slogan {
     height: 400px;
     width: 100%;
     border: 1px solid yellow;
-    color: #000;
+    
 }
 
 #container {
@@ -35,21 +36,22 @@
     width: 50%;    
     justify-content: center;
     align-items: center;   
-    background: rgba(0, 0, 0, 1);    
+    background-color: #533549;    
     background-size: cover;
     background-repeat: no-repeat;
     border: 1px solid green;    
 }
 
-#item2 div, #item4 div, #item6 div {
+#item2 div, #item4 div {
     height: 400px;
     width: 100%;    
     justify-content: center;
     align-items: center;
-    background: rgba(0, 0, 0, 1);    
+    background-color: #533549;   
     background-size: cover;
     background-repeat: no-repeat;
     border: 1px solid red;
+    
 }
 
 #item3, #item5 {
@@ -57,31 +59,25 @@
 }
 
 #foto1 {
-    background-image: url("assets/img/mulheres-empreendedoras.jpg") !important; 
+    background-image: url("assets/img/mulheres-empreendedoras.jpg"); 
     
 }
 
 #foto2 {
-    background-image: url("assets/img/ensinar5.jpg") !important; 
+    background-image: url("assets/img/ensinar5.jpg"); 
     
 }
 
 #foto3 {
-    background-image: url("assets/img/microempreendedora.jpg") !important; 
+    background-image: url("assets/img/microempreendedora.jpg"); 
 }
 
-/* #foto4 {
-    background-image: url("assets/img/fundo1.jpg") !important; 
-} */
 
 #foto5 {
-    background-image: url("assets/img/vendedora-hot-dog.png") !important;     
+    background-image: url("assets/img/vendedora.jpg");     
 }
 
-#foto6 {
-    background-image: url("assets/img/ensinar3.jpg") !important; 
-    
-}
+
 
 
 .frases-efeito {
@@ -101,7 +97,7 @@ h1 {
 
 .button {
     display:inline-block;
-    background-color:#533549;
+    background-color:#000;
     color: #f6b042; 
     text-transform: uppercase;
     font-size:12px;
